Enable animation on mobile bc bug when navigating pages. Remove header logo styles

--- a/landing/src/styles/header.module.css
+++ b/landing/src/styles/header.module.css
@@ -92,11 +92,6 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  fill: black;
-}
-
-.homeLink:hover svg {
-  fill: white;
 }
 
 @media (min-width: 750px) {
